--- a/DrakiaXYZ-DoorRandomizer.csproj
+++ b/DrakiaXYZ-DoorRandomizer.csproj
@@ -63,5 +63,8 @@
     <Compile Include="DoorRandomizerPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="LICENSE" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
