--- a/DrakiaXYZ-DoorRandomizer.csproj
+++ b/DrakiaXYZ-DoorRandomizer.csproj
@@ -62,9 +62,14 @@
     <Compile Include="DoorRandomizerComponent.cs" />
     <Compile Include="DoorRandomizerPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VersionChecker\TarkovVersion.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="LICENSE" />
+    <None Include="VersionChecker\setbuild.ps1" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>powershell.exe -ExecutionPolicy Bypass -NoProfile -NonInteractive -File $(ProjectDir)\VersionChecker\setbuild.ps1</PreBuildEvent>
+  </PropertyGroup>
 </Project>
