- Add F12 menu entry when plugin is disabled, indicating that the plugin was disabled -- For people using TarkovVersion, this should be run BEFORE your plugin adds F12 options, and you should throw right after calling it -- Adds a new dependency on UnityEngine.IMGUIModule.dll and UnityEngine.TextRenderingModule.dll

--- a/DrakiaXYZ-DoorRandomizer.csproj
+++ b/DrakiaXYZ-DoorRandomizer.csproj
@@ -57,6 +57,14 @@
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>..\..\EscapeFromTarkov_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.IMGUIModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\EscapeFromTarkov_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.TextRenderingModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\EscapeFromTarkov_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DoorRandomizerComponent.cs" />
