--- a/DrakiaXYZ-DoorRandomizer.csproj
+++ b/DrakiaXYZ-DoorRandomizer.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{3030962D-9B38-4745-86B7-CEDB49EF262F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DrakiaXYZ_DoorRandomizer</RootNamespace>
+    <RootNamespace>DrakiaXYZ.DoorRandomizer</RootNamespace>
     <AssemblyName>DrakiaXYZ-DoorRandomizer</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
